# KASA_FINAL3

./: Pipfile  db.sqlite3  gulpfile.js  package-lock.json  package.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  tailwind.config.js
assets/scss/: styles.css  styles.css.map  styles.scss
config/: asgi.py  custom_storages.py  settings.py  urls.py  wsgi.py
conversations/: models.py
conversations/migrations/: 0001_initial.py  0002_alter_conversation_options_alter_message_options_and_more.py
core/migrations/: 0001_initial.py  0002_delete_roomtype.py
lists/: models.py
lists/migrations/: 0001_initial.py  0002_list_rooms.py  0003_alter_list_rooms.py  0004_alter_list_user_delete_item.py
lists/templatetags/: embed_video_tags.py
paystack/: forms.py  models.py  urls.py  views.py
paystack/migrations/: 0001_initial.py
paystack/templatetags/: paystack_custom_tags.py
reservations/: admin.py  models.py  urls.py  views.py
reservations/commands/: seed_reservations.py
reservations/migrations/: 0001_initial.py  0002_alter_reservation_status_bookedday.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_options_alter_review_accuracy_and_more.py
rooms/: forms.py  models.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0003_alter_room_price.py  0004_alter_amenity_name_alter_facility_name_and_more.py  0005_alter_room_guests_alter_room_price.py  0006_video.py  (+3 more)
templates/: base.html
users/: apps.py  exceptions.py  forms.py  mixins.py  models.py  urls.py  utils.py  views.py
(+30 files in other folders)
