[tool.poetry]
name = "kasa"
version = "0.1.0"
description = ""
authors = ["wottan32 <mariotorreslagos@gmail.com>"]
readme = "README.md"
packages = [{include = "kasa_main"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
sentry-sdk = "^1.11.1"
django-countries = "^7.5"
django-seed = "^0.3.1"
django-translation-manager = "^1.3.0"
django-storages = "^1.13.1"
tailwind = "^3.1.5b0"
django-tailwind = "^3.4.0"
pytailwindcss = "^0.1.4"
django-embed-video = "^1.4.8"
pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
